fix the awkward spacing of the nav links/items for desktop view

--- a/public/css/app.css
+++ b/public/css/app.css
@@ -27342,7 +27342,6 @@ figcaption {
 }
 
 .site-header {
-  min-height: 5rem;
   font-family: "Open Sans";
   position: fixed;
   background: #FFF;
